--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
+    "ng2-completer": "^1.6.3",
     "rxjs": "^5.5.2",
     "ts-md5": "^1.2.2",
     "zone.js": "^0.8.14"
