--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "ng2-completer": "^1.6.3",
     "ng2-daterangepicker": "^2.0.12",
+    "ng2-sticky-kit": "^5.0.0",
     "rxjs": "^5.5.2",
     "ts-md5": "^1.2.2",
     "zone.js": "^0.8.14"
