--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "core-js": "^2.4.1",
     "ng2-completer": "^1.6.3",
     "ng2-daterangepicker": "^2.0.12",
+    "ng2-nouislider": "^1.7.6",
+    "nouislider": "^10.1.0",
     "rxjs": "^5.5.2",
     "ts-md5": "^1.2.2",
     "zone.js": "^0.8.14"
