--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -p 80",
-    "build": "ng build --prod --aot=false --build-optimizer=false",
+    "build": "ng build -prod && cp docs/index.html docs/404.html",
+    "push": "npm build && git add . && git commit -m \"$1\" && git pull && git push -u",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
